<!--
  ~ Copyright 2023 Open Mobile Hub
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">OMH Maps demo</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="back_to_menu_fragment">Back to Menu fragment</string>
    <string name="open_polyline_map">Open Polyline Map</string>
    <string name="drop_pin">Drop pin</string>
    <string name="button_to_share_location">Button to share location</string>
    <string name="example_coordinate">Lat: 16.6612333 \nLng: 66.11323123</string>
    <string name="share_location">Share Location</string>
    <string name="center_message">Centering location</string>
    <string name="share_link">"Share link"</string>
    <string name="latitude_longitude_text">Lat: %1$s \nLng: %2$s</string>
    <string name="location_result_fragment_text">Location Result Fragment</string>
    <string name="map_fragment_text">Map Fragment</string>
    <string name="menu_fragment_text">Menu Fragment</string>
    <string name="map_polylines_fragment_text">Map Polylines Fragment</string>
    <string name="map_polygons_fragment_text">Map Polygons Fragment</string>
    <string name="map_styles_fragment_text">Map Styles Fragment</string>
    <string name="map_camera_fragment_text">Map Camera Fragment</string>
    <string name="map_shared_location_fragment_text">Map Shared Location Fragment</string>
    <string name="no_internet_connection">"No internet connection"</string>
    <string name="lost_internet_connection">"Lost internet connection"</string>
    <string name="move_message">"For more accuracy move to an open space"</string>
    <string name="map_markers_fragment_text">Map Markers Fragment</string>
    <string name="open_markers_demo_map">Open Markers Demo</string>
    <string name="joint_type_miter">Miter</string>
    <string name="joint_type_round">Round</string>
    <string name="joint_type_bevel">Bevel</string>
    <string name="cap_type_square">Square</string>
    <string name="cap_type_butt">Butt</string>
    <string name="cap_type_round">Round</string>
    <string name="cap_type_custom">Custom</string>
    <string name="pattern_type_none">None</string>
    <string name="pattern_type_dotted">Dotted</string>
    <string name="pattern_type_dashed">Dashed</string>
    <string name="pattern_type_custom">Custom</string>
    <string name="clickable">Clickable</string>
    <string name="visible">Visible</string>
    <string name="flat">Flat</string>
    <string name="draggable">Draggable</string>
    <string name="rotation">Rotation</string>
    <string name="anchorU">Anchor U</string>
    <string name="anchorV">Anchor V</string>
    <string name="appearance">Appearance</string>
    <string name="snippet">Snippet</string>
    <string name="alpha">Alpha</string>
    <string name="marker_appearance_type_default">Default</string>
    <string name="marker_appearance_type_custom_icon">Custom icon</string>
    <string name="marker_appearance_type_custom_color">Custom color</string>
    <string name="span">Span</string>
    <string name="gradient">Gradient</string>
    <string name="span_pattern">Span Pattern</string>
    <string name="width">Width</string>
    <string name="color">Color</string>
    <string name="cap">Cap</string>
    <string name="start_cap">Start Cap</string>
    <string name="end_cap">End Cap</string>
    <string name="join_type">Join Type</string>
    <string name="pattern">Pattern</string>
    <string name="z_index">Z Index</string>
    <string name="segments">Segments</string>
    <string name="span_color">Span Color</string>
    <string name="from_color">From Color</string>
    <string name="to_color">To Color</string>
    <string name="holes">Holes</string>
    <string name="stroke_width">Stroke Width</string>
    <string name="stroke_color">Stroke Color</string>
    <string name="fill_color">Fill Color</string>
    <string name="stroke_join_type">Stroke Join Type</string>
    <string name="stroke_pattern">Stroke Pattern</string>
    <string name="none">None</string>
    <string name="dark">Dark</string>
    <string name="retro">Retro</string>
    <string name="silver">Silver</string>
    <string name="map_style_radio_group_title">Select a map style:</string>
    <string name="provider">Provider</string>
    <string name="zoom_gestures">Zoom Gestures</string>
    <string name="show_camera_position_coordinate">Show Camera Position Coordinate</string>
    <string name="move_map_to_everest">Move Map to Everest</string>
    <string name="move_map_to_sahara">Move Map to Sahara</string>
    <string name="make_snapshot">Make snapshot</string>
    <string name="close">Close</string>
    <string name="map_snapshot">Map Snapshot</string>
    <string name="rotate_gestures">Rotate Gestures</string>
    <string name="map_info_windows_fragment_text">Info Windows Fragment</string>
    <string name="label_imperative_usage">Imperative usage</string>
    <string name="label_demo_behaviour">Demo behaviour</string>
    <string name="open_info_window">Open Info Window</string>
    <string name="hide_info_window">Close Info Window</string>
    <string name="info_window_appearance_type_default">Default</string>
    <string name="info_window_appearance_type_custom_window_view">Custom window view</string>
    <string name="info_window_appearance_type_custom_contents_view">Custom contents view</string>
    <string name="custom_image">Custom image</string>
    <string name="window_should_rerender_on_drag">Re-render info window when dragging</string>
    <string name="label_info_window_properties">Info window properties</string>
    <string name="info_window_opened">Info window opened (listener)</string>
    <string name="info_window_closed">Info window closed (listener)</string>
    <string name="my_location_enabled">My Location Enabled</string>
    <string name="randomize_points">Randomize points</string>
    <string name="info_window_clicked">Info window clicked</string>
    <string name="info_window_long_clicked">Info window long-clicked</string>
    <string name="anchorIWU">Info window anchor U</string>
    <string name="anchorIWV">Info window anchor V</string>
    <string name="label_marker_properties">Marker properties</string>
    <string name="window_should_toggle_on_marker_click">Info win. toggles on marker click</string>
    <string name="window_should_hide_on_click">Info win. hides on click</string>
    <string name="randomize_outline">Randomize outline</string>
    <string name="remove_marker_on_click">Remove marker on click</string>
    <string name="show_reference_polyline">Show Reference Polyline (Add/Remove)</string>
    <string name="show_reference_polygon">Show Reference Polygon (Add/Remove)</string>
    <string name="label_demo_button_restore_customizable_marker">Restore customizable marker</string>
</resources>
