<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2023 Open Mobile Hub
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".maps.MapMarkersFragment">

    <fragment
        android:id="@+id/fragment_markers_map_container"
        android:name="com.openmobilehub.android.maps.core.presentation.fragments.OmhMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_omh_map" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_markers_map_container">

        <LinearLayout
            android:id="@+id/controlPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/label_marker_properties"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkBox_isVisible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/visible" />

            <CheckBox
                android:id="@+id/checkBox_isFlat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/flat" />

            <CheckBox
                android:id="@+id/checkBox_isClickable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/clickable" />

            <CheckBox
                android:id="@+id/checkBox_isDraggable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/draggable" />

            <CheckBox
                android:id="@+id/checkBox_hasSnippet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/snippet" />

            <com.openmobilehub.android.maps.sample.customviews.PanelSeekbar
                android:id="@+id/panelSeekbar_rotation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                app:maxValue="360"
                app:minValue="0"
                app:titleText="@string/rotation" />

            <com.openmobilehub.android.maps.sample.customviews.PanelSeekbar
                android:id="@+id/panelSeekbar_anchorU"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                app:maxValue="100"
                app:minValue="0"
                app:titleText="@string/anchorU" />

            <com.openmobilehub.android.maps.sample.customviews.PanelSeekbar
                android:id="@+id/panelSeekbar_anchorV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                app:maxValue="100"
                app:minValue="0"
                app:titleText="@string/anchorV" />

            <com.openmobilehub.android.maps.sample.customviews.PanelSeekbar
                android:id="@+id/panelSeekbar_alpha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                app:maxValue="100"
                app:minValue="0"
                app:titleText="@string/alpha" />

            <com.openmobilehub.android.maps.sample.customviews.PanelSpinner
                android:id="@+id/panelSpinner_markerAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                app:titleText="@string/appearance" />

            <com.openmobilehub.android.maps.sample.customviews.PanelColorSeekbar
                android:id="@+id/panelSeekbar_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                app:titleText="@string/color" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/label_demo_behaviour"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkBox_demoShouldRemoveMarkerOnClick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/remove_marker_on_click" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>