<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2023 Open Mobile Hub
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".maps.MapInfoWindowsFragment">

    <fragment
        android:id="@+id/fragment_info_windows_map_container"
        android:name="com.openmobilehub.android.maps.core.presentation.fragments.OmhMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_omh_map" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_info_windows_map_container">

        <LinearLayout
            android:id="@+id/controlPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/label_info_window_properties"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkBox_hasSnippet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:contentDescription="@string/snippet"
                android:text="@string/snippet" />

            <com.openmobilehub.android.maps.sample.customviews.PanelSeekbar
                android:id="@+id/panelSeekbar_anchorIWU"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:contentDescription="@string/anchorIWU"
                app:maxValue="100"
                app:minValue="0"
                app:titleText="@string/anchorIWU" />

            <com.openmobilehub.android.maps.sample.customviews.PanelSeekbar
                android:id="@+id/panelSeekbar_anchorIWV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:contentDescription="@string/anchorIWV"
                app:maxValue="100"
                app:minValue="0"
                app:titleText="@string/anchorIWV" />

            <com.openmobilehub.android.maps.sample.customviews.PanelSpinner
                android:id="@+id/panelSpinner_infoWindowAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:contentDescription="@string/appearance"
                app:titleText="@string/appearance" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/label_demo_behaviour"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkBox_demoShouldReRenderInfoWindowOnDragging"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:contentDescription="@string/window_should_rerender_on_drag"
                android:text="@string/window_should_rerender_on_drag" />

            <CheckBox
                android:id="@+id/checkBox_demoShouldToggleWindowOnMarkerClick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:contentDescription="@string/window_should_toggle_on_marker_click"
                android:text="@string/window_should_toggle_on_marker_click" />

            <CheckBox
                android:id="@+id/checkBox_demoShouldHideWindowOnClick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:contentDescription="@string/window_should_hide_on_click"
                android:text="@string/window_should_hide_on_click" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/label_imperative_usage"
                android:gravity="center"
                android:text="@string/label_imperative_usage"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button_openInfoWindow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/open_info_window"
                android:text="@string/open_info_window" />

            <Button
                android:id="@+id/button_hideInfoWindow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/hide_info_window"
                android:text="@string/hide_info_window" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/label_marker_properties"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkBox_isVisible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:contentDescription="@string/visible"
                android:text="@string/visible" />

            <CheckBox
                android:id="@+id/checkBox_isClickable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:contentDescription="@string/clickable"
                android:text="@string/clickable" />

            <com.openmobilehub.android.maps.sample.customviews.PanelSeekbar
                android:id="@+id/panelSeekbar_rotation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:contentDescription="@string/rotation"
                app:maxValue="360"
                app:minValue="0"
                app:titleText="@string/rotation" />

            <com.openmobilehub.android.maps.sample.customviews.PanelSeekbar
                android:id="@+id/panelSeekbar_anchorU"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:contentDescription="@string/anchorU"
                app:maxValue="100"
                app:minValue="0"
                app:titleText="@string/anchorU" />

            <com.openmobilehub.android.maps.sample.customviews.PanelSeekbar
                android:id="@+id/panelSeekbar_anchorV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:contentDescription="@string/anchorV"
                app:maxValue="100"
                app:minValue="0"
                app:titleText="@string/anchorV" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>